z-index fix

--- a/packages/envision-docs/src/scss/header.scss
+++ b/packages/envision-docs/src/scss/header.scss
@@ -5,7 +5,7 @@
    top: 0;
    width: 100%;
    border-bottom: 1px solid #d3d3d3;
-   z-index: 2147483646;
+   z-index: 10000;
 }
 
 .header {
